Add step 9
