# api/controllers/restaurants.mean.js
@@ -1,0 +1,22 @@
+'use strict'
+
+
+module.exports = {
+    indexMean: indexMean
+};
+
+function indexMean(req, res) {
+
+    var restaurants = [
+	{
+	    name: 'Bar Americano',
+	    address: '20 Presgrave Pl, Melbourne VIC 3000, Australia'
+	},
+	{
+	    name: 'Ronchi 78',
+	    address: 'Via S. Maurilio, 7, 20123 Milano, Italy'
+	}
+    ];
+
+    res.json(restaurants);
+}
